Changelog for mk-parallel-dump:

   * The tool crashed if only empty databases were dumped (issue 1034).

2010-06-08: version 1.0.25

   * Connections did not preserve server SQL modes (issue 801).

2010-05-03: version 1.0.24

   * Added ability to specify a DSN on the command line.

2010-04-01: version 1.0.23

   * Added DSN OPTIONS section to POD (issue 55).

2010-03-01: version 1.0.22

   * Added --client-side-buffering (issue 837).
   * Enabled mysql_use_result by default (issue 837).

2010-02-01: version 1.0.21

   * Database-qualified --tables filters did not work (issue 806).
   * Added --[no]gzip (issue 814).
   * Removed shell calls to mysqldump.

2010-01-06: version 1.0.20

   * The script crashed immediately on some OS or versions of Perl (issue 733).

2009-12-02: version 1.0.19

   * Tables were not dumped on MySQL 4.
   * Added --ignore-tables-regex (issue 152).
   * Added --ignore-databases-regex (issue 152).

2009-10-30: version 1.0.18

   * Removed sets and all set-related options (issue 637).
   * Removed --since (issue 636).
   * Removed dump file compression and --[no]gzip (issue 639).
   * Removed ability to "write your own command line" (issue 638).
   * Removed ability to dump triggers and views (issue 316).
   * Removed all statements except CREATE TABLE and INSERT from dump files.
   * Did not dump tables with spaces in their names (issue 446).
   * Added --[no]resume (issue 495).
   * Added --mysqldump.
   * --progress did not respect --ignore-engines (issue 573).
   * --progress was incorrect with --chunk-size (issue 642).
   * --set-vars did not work (issue 597).
   * Changed output format of --verbose and --progress.
   * Command line options did not override config file options (issue 617).

2009-07-31: version 1.0.17

   * Added RISKS section to POD (issue 538).
   * The script crashed immediately on Windows (issue 531).
   * --threads was ignored if /proc/cpuinfo could be read (issue 534).