@@ -190,7 +190,7 @@ SKIP: {
        E => 'InnoDB',
        L => '`actor_id`,`first_name`,`last_name`,`last_update`',
        N => 'actor',
-       W => "`actor_id` < '51'",
+       W => "`actor_id` = 0",
        Z => 4050,
        first_tbl_in_db => 1
      },
@@ -200,11 +200,20 @@ SKIP: {
        E => 'InnoDB',
        L => '`actor_id`,`first_name`,`last_name`,`last_update`',
        N => 'actor',
+       W => "`actor_id` > 0 AND `actor_id` < '51'",
+       Z => 4050,
+     },
+     {
+       C => 2,
+       D => 'sakila',
+       E => 'InnoDB',
+       L => '`actor_id`,`first_name`,`last_name`,`last_update`',
+       N => 'actor',
        W => "`actor_id` >= '51' AND `actor_id` < '101'",
        Z => 4050
      },
      {
-       C => 2,
+       C => 3,
        D => 'sakila',
        E => 'InnoDB',
        L => '`actor_id`,`first_name`,`last_name`,`last_update`',
@@ -213,7 +222,7 @@ SKIP: {
        Z => 4050
      },
      {
-       C => 3,
+       C => 4,
        D => 'sakila',
        E => 'InnoDB',
        L => '`actor_id`,`first_name`,`last_name`,`last_update`',
