@@ -26,7 +26,7 @@ elsif ( !@{$dbh->selectcol_arrayref('SHOW DATABASES LIKE "sakila"')} ) {
    plan skip_all => 'Sandbox master does not have the sakila database';
 }
 else {
-   plan tests => 1;
+   plan tests => 2;
 }
 
 my $cnf = '/tmp/12345/my.sandbox.cnf';
@@ -37,7 +37,7 @@ my $basedir = '/tmp/dump/';
 # Issue 642: mk-parallel-dump --progress is incorrect when using --chunk-size
 # #############################################################################
 diag(`rm -rf $basedir`);
-my @lines = `$cmd --base-dir $basedir -v -v -d sakila -t actor --threads 1 --progress --chunk-size 50`;
+my @lines = `$cmd --base-dir $basedir -v -v -d sakila -t actor --threads 1 --progress --chunk-size 50 --no-zero-chunk`;
 shift @lines;  # header
 pop @lines;  # all
 my @progress = map { grep { $_ =~ m/k\// } split(/\s+/, $_) } @lines;
@@ -55,6 +55,25 @@ is_deeply(
    '--progress with --chunk-size (issue 642)'
 );
 
+diag(`rm -rf $basedir`);
+@lines = `$cmd --base-dir $basedir -v -v -d sakila -t actor --threads 1 --progress --chunk-size 50`;
+shift @lines;  # header
+pop @lines;  # all
+@progress = map { grep { $_ =~ m/k\// } split(/\s+/, $_) } @lines;
+
+is_deeply(
+   \@progress,
+   [
+      '3.96k/16.00k',
+      '7.91k/16.00k',
+      '11.87k/16.00k',
+      '15.82k/16.00k',
+      '19.78k/16.00k',
+      '19.78k/16.00k',
+      '19.78k/16.00k'
+   ],
+   '--progress with --chunk-size and a zero chunk'
+);
 # #############################################################################
 # Done.
 # #############################################################################
