@@ -1,6 +1,7 @@
 Changelog for mk-parallel-dump:
 
    * The tool crashed if only empty databases were dumped (issue 1034).
+   * Added --[no]zero-chunk (issue 941).
 
 2010-06-08: version 1.0.25
 
